--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,9 +3,16 @@ import Social from "./Social.astro";
 ---
 
 <footer>
-    <p>
-    <Social platform="twitter" username="astrodotbuild" />
-    <Social platform="github" username="withastro" />
-    <Social platform="youtube" username="astrodotbuild" />
-    </p>
+	<Social platform="twitter" username="astrodotbuild" />
+	<Social platform="github" username="withastro" />
+	<Social platform="youtube" username="astrodotbuild" />
+    <Social />
 </footer>
+
+<style>
+	footer {
+		display: flex;
+		gap: 1rem;
+		margin-top: 2rem;
+	}
+</style>
