adds hamburger for mobile creates the 1st layout file

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -78,5 +78,9 @@ const textCase = "uppercase";
 			{skills.map((skill) => <li class="skill">{skill}</li>)}
 		</ul>
         <Footer />
+        <script>
+			//on click toggle expand menu wrapper div class
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
