--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,7 +4,7 @@ import Footer from "../components/Footer.astro";
 
 import "../styles/global.css";
 
-const pageTitle = "Home Page";
+const { pageTitle } = Astro.props;
 ---
 
 <html lang="en">
@@ -18,7 +18,7 @@ const pageTitle = "Home Page";
 	<body>
 		<Header />
 		<h1>{pageTitle}</h1>
-        <slot />
+		<slot />
 		<Footer />
 		<script>
 			//on click toggle expand menu wrapper div class
