--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+
 const pageTitle = "Home Page";
 ---
 
-<BaseLayout>
+<BaseLayout pageTitle={pageTitle}>
 	<h2>My awesome blog subtitle</h2>
 </BaseLayout>
